<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="com.example.abastecimento.FormularioActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etQuilometragem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quilometragem"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <fr.ganfra.materialspinner.MaterialSpinner
        android:id="@+id/spPosto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:ms_enableFloatingLabel="true"
        app:ms_floatingLabelText="@string/posto"
        app:ms_hint="@string/posto" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spPosto"
        tools:layout_editor_absoluteX="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLitros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/litros"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btExcluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/corPerigo"
        android:onClick="excluir"
        android:text="@string/excluir"
        android:textColor="@color/corPerigoContraste"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="salvar"
        android:text="@string/salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btExcluir"

        />

</androidx.constraintlayout.widget.ConstraintLayout>